fixed table text alignment in 3ds page and changed font color in privacy policy

--- a/assets/scss/component/_table.scss
+++ b/assets/scss/component/_table.scss
@@ -48,6 +48,34 @@
         &-content {
             display: flex;
 
+            & > div {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                border: 1px solid $mid-gray;
+                border-top: none;
+                padding: 16px 8px;
+                flex-basis: 50%;
+
+                & > span {
+                    color: $black;
+                    text-align: center;
+
+                    @include respond(mobile) {
+                        font-size: 14px;
+                    }
+
+                    &:nth-of-type(1) {
+                        border-right: none;
+                    }
+
+                    &:nth-of-type(2) {
+                        align-self: center;
+                    }
+                }
+            }
+
             & > span {
                 flex-basis: 50%;
                 padding: 16px 8px;
@@ -63,6 +91,10 @@
                 &:nth-of-type(1) {
                     background-color: #f9fbff;
                     border-right: none;
+                }
+
+                &:nth-of-type(2) {
+                    vertical-align: middle;
                 }
             }
         }
