--- a/assets/scss/page/_policy.scss
+++ b/assets/scss/page/_policy.scss
@@ -21,7 +21,7 @@
             color: $dark-gray;
 
             &:nth-of-type(1) {
-                color: #000;
+                color: $black;
             }
         }
 
